assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap');

@font-face {
    font-family: 'Mustang';
    src: url(/assets/fontes/Black\ Mustang.ttf) format('truetype');
}

@font-face {
    font-family: 'Roboto-normal';
    src: url(/assets/fontes/Roboto-Black.ttf) format('truetype');
}

@font-face {
    font-family: 'Roboto-bold';
    src: url(/assets/fontes/Roboto-Bold.ttf) format('truetype');
}

:root {
    --main: #5e0202;
    --main-ligth: #7e0303;
    --green: #027353;
    --blue: #085A8C;
    --yellow: #EDA624;

    --neutro-0: #000;
    --neutro-1: #fff;
    --neutro-2: #070606;
}

/* RESETS */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* TAGS PADRÕES */

::-webkit-scrollbar {
    width: 15px;

}

::-webkit-scrollbar-track {
    background: var(--neutro-0);
}

::-webkit-scrollbar-thumb {
    background: var(--neutro-2);
    /* Cor do polegar da barra de rolagem */
    border-radius: 5px;
}

::-webkit-scrollbar-thumb:hover {
    background: var(--main);
}

body {
    position: relative;
    width: 100vw;
    height: 100vh;
    overflow-x: hidden;
    font-family: "Ubuntu", sans-serif;
    font-weight: 400;
}

main {
    width: 100%;
    height: 100%;
    color: white;
}

h1 {
    text-align: center;
    font-weight: 700;
    font-size: clamp(2rem, 2rem, 4rem);
    color: var(--main-ligth);
    border: none;
    text-shadow: 0px 0px 100px var(--main);
    font-family: "Rubik Mono One", monospace;
    font-style: normal;
}

p {
    font-size: clamp(12px, .8rem, 24px);
}

ul {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 30%;
    min-width: 250px;
    max-width: 400px;
}

li {
    font-weight: 900;
    text-decoration: none;
    list-style-type: none;
    cursor: pointer;
    transition: all 0.2s ease;
}

nav {
    padding: 0% 5%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    width: 100%;
}

a {
    text-decoration: none;
    color: var(--neutro-1);
    font-size: 12px;
}

a:hover {
    text-decoration: none;
    color: white;
    font-size: 12px;
}

/* Classes Gerais */

/*texto t*/
.t-stroke {
    -webkit-text-stroke: 1px var(--neutro-0);
}

.t-shadow {
    text-shadow: 5px 5px 5px var(--neutro-0);
}

/*texto*/

.pointer {
    cursor: pointer;
}


/* Classes Específicas  */

.pages {
    position: relative;
    width: 100%;
    height: 100%;
    background-color: var(--neutro-2);
    display: grid;
    place-items: center;
}

.logo {
    width: 20px;
    height: 20px;
    border-radius: 50%;
}

.btn-d {
    width: 30%; 
    max-width: 120px;
    height: 40px;
    border-radius: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--main);
    color: var(--neutro-0);
    font-size: .9rem;
    font-weight: 500;
    box-shadow: 5px 5px 5px var(--neutro-0);
    transition: all 0.3s ease;
}

.btn-d:hover {
    cursor: pointer;
    box-shadow: 5px 5px 15px var(--neutro-0);
    background-color: var(--main-ligth);
    font-weight: 400;
}

.page1-frames {
    width: 100%;
    height: 100%;
    display: grid;
    grid-template-columns: auto auto;
    gap: 5px;
    position: relative;
}

.img {
    width: 100%;
    height: auto;
}

.r-hover {
    box-shadow: 0px 0px 50px var(--main-ligth);
}

.page-frames {
    display: flex;
    flex-direction: row;
    align-items: center;
}



/* CARDS */
.card {
    position: relative;
    width: 300px;
    height: 450px;
    /*300*/
    overflow: hidden;
    background-color: transparent;
    border-radius: 10px;
    box-shadow: 5px 5px 5px var(--neutro-0);
    margin: 0% 5%;
}

.absolute-a {
    position: absolute;
    left: 0px;
}

.card img {
    width: 100%;
    height: 100%;
    border-radius: 5px;
}

.card-info {
    display: flex;
    flex-direction: column;
    padding: 5%;
    width: 100%;
    height: 100%;
    margin: 5px;
}

.card-children {
    height: 100%;
    position: absolute;
    top: -100%;
    transition: top 0.5s ease;
}

/* BOTÕESS NAVEGAÇÃO ENTRE OS PROJETOS */
.nav-button {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    background-color: var(--main);
    opacity: 0.5;
    color: var(--neutro-1);
    border: none;
    padding: 10px;
    cursor: pointer;
    z-index: 1;
}

.nav-button.left {
    left: 48%;
}

@media (width <=800px) {
    .nav-button.left {
        left: 0;
    }

    .mobile-none{
        display: none;
    }
}

.nav-button.right {
    right: 0%;
}

/* FADE PRA SUAVIZAR A CORRER A LISTA DOS CARDS */
.fade-in {
    opacity: 0;
    transition: opacity 1s ease-in-out;
}

.fade-in.visible {
    opacity: 1;
}


.pages {
    transition: opacity 0.5s ease-in-out;
    opacity: 1;
}

.pages.d-none {
    opacity: 0;
    pointer-events: none;
}

